Refactored ID mapping to use databricks jdbc template instead (#1571) (#1576)
* Refactored ID mapping to use databricks jdbc template instead (#1571)

Signed-off-by: Angelica Ochoa <15623749+ao508@users.noreply.github.com>

* Remove references to user 'laptop' (#1577)

Signed-off-by: Angelica Ochoa <15623749+ao508@users.noreply.github.com>

* Updated databricks view name (#1578)

Signed-off-by: Angelica Ochoa <15623749+ao508@users.noreply.github.com>

* Renamed mat views (#1579)

Signed-off-by: Angelica Ochoa <15623749+ao508@users.noreply.github.com>

---------

Signed-off-by: Angelica Ochoa <15623749+ao508@users.noreply.github.com>